fix: address follow-up PR review findings